--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 							
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<!--<li><a href="#" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>-->
+							<li><a href="https://github.com/ronimaskey" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -161,8 +161,8 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<!--<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>-->
+									<li><a href="https://github.com/ronimaskey" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
