--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>r_m_website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -44,15 +44,11 @@
 								<header class="major">
 									
 									<h2><a href="#">Frontend Engineer</a></h2>
-									<p> HTML5, CSS3 (SASS, LESS), JavaScript, React.js<br>
-									MERN Stack <br>
-									
-    MongoDB - document database<br>
-    Express(.js) - Node.js web framework<br>
-    React(.js) - a client-side JavaScript framework<br>
-    Node(.js) - the premier JavaScript web server<br>
-
-</p>
+									<p> HTML5, CSS3 (SASS, LESS), JavaScript, React.js, jQuery<br>
+									Responsive Web Design, Python <br>
+									PHP, mySQL<br>
+                							Version Control (GIT), Bootstrap, Bulma <br>
+									</p>
 								</header>
 								<a href="#" class="image main contactLink"><img src="images/bg.jpg" alt="" /></a>
 								<ul class="actions special">
