--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="#">Frontend Engineer</a></h2>
+									<h2><a href="#">Frontend/Software Developer</a></h2>
 									<p> HTML5, CSS3 (SASS, LESS), JavaScript, React.js, jQuery<br>
 									Responsive Web Design, Python <br>
 									PHP, mySQL<br>
